# agentic-hedge-fund

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  TESTING.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  run_ci_checks.sh  sample.env
.cursor/rules/: python-function-reflection-assistant.mdc
.github/workflows/: ci.yml
app/: main.py
app/agents/: main.py
app/agents/graph/: log_state.py  nodes.py  schemas.py  state.py  workflow.py
app/agents/services/: llm.py
app/agents/tools/: __init__.py  insider_tool.py  rag_tool.py  run_research_vectordatabsae.py
app/api/: router.py  supabase_rate_limit.sql
app/api/routes/: analyze.py  health.py  meta.py  rag_ingest.py  rag_query.py
app/api/schemas/: rag.py  signal.py
app/frontend/: Dockerfile  package-lock.json  package.json
app/observability/: tracing.py
app/rag/core/: config.py  constants.py
app/rag/generation/: generation.py
app/rag/indexing/: qdrant_indexing.py
app/rag/ingestion/: custom_transformation.py  pdf_ingestion.py  url_ingestion.py
app/rag/pipelines/: __init__.py  factory.py  ingest_index_pipeline.py  query_pipeline.py  types.py
app/rag/reranking/: reranking.py
app/rag/retrieval/: retrieval.py
app/services/: rag_service.py  rate_limit_service.py  signal_service.py
evals/: README.md  test_rag_query_eval.py  test_signals_analyze_eval.py
evals/agents/: README.md  test_e2e_dataset_eval.py  test_graph_dataset_eval.py  test_nodes_dataset_eval.py
evals/agents/configs/: eval_profiles.yaml  thresholds.yaml
evals/agents/metrics/: quality_metrics.py
evals/agents/runners/: run_e2e_eval.py  run_graph_eval.py  run_nodes_eval.py
evals/datasets/: rag_query_golden_v1.json  signals_analyze_golden_v1.json
evals/rag/: README.md  __init__.py  test_e2e_eval.py  test_generation_eval.py  test_retrieval_eval.py
evals/rag/generation/: __init__.py  generation_golden_v2.json  helpers.py  pytest.ini  test_generation_correctness_custom_deepeval.py  test_generation_dataset_contract_v2.py  test_generation_faitfulness_deepeval.py  test_generation_relevancy_deepeval.py
qdrant_data/: raft_state.json
scripts/: download_mag7_quarterly_docs.py  download_missing_mag7_pdfs.py
tests/agents/integration/: test_workflow_graph_integration.py
tests/agents/unit/: test_llm_service_unit.py
tests/api/e2e/: test_api_smoke_e2e.py
tests/api/integration/: test_analyze_route_integration.py  test_router_integration.py
tests/api/unit/: test_rate_limit_service_unit.py
(+83 files in other folders)
